--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
+REVERB_APP_ID=
+REVERB_APP_KEY=
+REVERB_APP_SECRET=
+REVERB_HOST=""
+REVERB_PORT=8080
+REVERB_SCHEME=http
+
 VITE_API_URL=
-VITE_WS_HOST=
-VITE_WS_PORT=6001
-VITE_WS_KEY=
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
