--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "laravel-echo": "^2.0.2",
+    "pusher-js": "^8.4.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
