--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.8.4",
     "laravel-echo": "^2.0.2",
     "pusher-js": "^8.4.0",
+    "sweetalert2": "^11.18.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
